Apply PR #1442 changes and fix test failures
- Created MatchedPattern.java: data class for matched text with coordinates
- Created PdfContentTextLocator.java: handler for locating text coordinates
- Created PdfTextLocator.java: public API for text location
- Created PdfContentTextExtractor.java: concrete implementation of text extraction
- Modified PdfContentStreamHandler.java: refactored to abstract class
- Modified ParsedText.java: added create() method and restored getUnscaledTextWidth()
- Modified PdfTextExtractor.java: added entry point methods for text location
- Fixed test failures by ensuring width calculation uses font codes not decoded text

Co-authored-by: andreasrosdal <259156774+andreasrosdal@users.noreply.github.com>